force-app/main/default/objects/ChessBoard__c/ChessBoard__c.object-meta.xml
<CustomObject>
    <label>ChessBoard</label>
    <nameField>
        <label>ChessBoard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChessBoards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>