force-app/main/default/objects/ChessBoard__c/fields/Black_Name__c.field-meta.xml
<CustomField>
    <fullName>Black_Name__c</fullName>
    <formula>Player_Black__r.FirstName + &#39; &#39; + Player_Black__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Black_Name</label>
    <type>Text</type>
</CustomField>