force-app/main/default/objects/ChessBoard__c/fields/Current_Player__c.field-meta.xml
<CustomField>
    <fullName>Current_Player__c</fullName>
    <label>Current Player</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>