force-app/main/default/objects/ChessBoard__c/fields/Current_Turn__c.field-meta.xml
<CustomField>
    <fullName>Current_Turn__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Current Turn</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>