force-app/main/default/objects/ChessBoard__c/fields/Current_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ChessBoards3</relationshipName>
    <type>Lookup</type>
</CustomField>