force-app/main/default/objects/ChessBoard__c/fields/Game_Status__c.field-meta.xml
<CustomField>
    <fullName>Game_Status__c</fullName>
    <label>Game Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>