force-app/main/default/objects/ChessBoard__c/fields/Player_Black__c.field-meta.xml
<CustomField>
    <fullName>Player_Black__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player Black</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ChessBoards1</relationshipName>
    <type>Lookup</type>
</CustomField>