force-app/main/default/objects/ChessBoard__c/fields/Player_White__c.field-meta.xml
<CustomField>
    <fullName>Player_White__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player White</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ChessBoards</relationshipName>
    <type>Lookup</type>
</CustomField>