force-app/main/default/objects/ChessBoard__c/fields/White_Name__c.field-meta.xml
<CustomField>
    <fullName>White_Name__c</fullName>
    <formula>Player_White__r.FirstName + &#39; &#39; + Player_White__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>White_Name</label>
    <type>Text</type>
</CustomField>