force-app/main/default/objects/ChessBoard__c/fields/Winning_Player__c.field-meta.xml
<CustomField>
    <fullName>Winning_Player__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winning Player</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ChessBoards2</relationshipName>
    <type>Lookup</type>
</CustomField>